--- a/src/pretalx/locale/ar/LC_MESSAGES/django.po
+++ b/src/pretalx/locale/ar/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-16 12:26+0000\n"
-"PO-Revision-Date: 2023-05-22 13:26+0000\n"
-"Last-Translator: malek chalak <malek@smex.org>\n"
+"PO-Revision-Date: 2025-01-15 10:49+0000\n"
+"Last-Translator: Tobias Kunze <r@rixx.de>\n"
 "Language-Team: none\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
-"X-Generator: Weblate 4.4.2\n"
+"X-Generator: Weblate 5.6.2\n"
 
 #: pretalx/agenda/phrases.py:8
 msgid "Thank you for your feedback!"
@@ -2866,7 +2866,7 @@ msgid ""
 "See you there!\n"
 "The {event_name} organisers"
 msgstr ""
-"{confirmation_link}نرحب بك!\n"
+"نرحب بك!\n"
 "\n"
 "يسعدنا إخبارك بإنه قد تم قبول طلبك (مقترحك) - “{submission_title}”\n"
 "إلى {event_name}. الرجاء الضغط على هذا الرابط لتأكيد حضورك:\n"
