--- a/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
@@ -414,7 +414,7 @@ msgstr "Área de código de barras"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:529
 msgid "Powered by pretix"
-msgstr "Distribuído por pretix"
+msgstr "Distribuído por eventyay"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:531
 msgid "Object"
