--- a/src/pretix/locale/pt_PT/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/pt_PT/LC_MESSAGES/djangojs.po
@@ -392,7 +392,7 @@ msgstr "Área do código de barras"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:529
 msgid "Powered by pretix"
-msgstr "Powered by pretix"
+msgstr "Powered by eventyay"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:531
 msgid "Object"
