--- a/src/pretix/locale/nl_Informal/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/nl_Informal/LC_MESSAGES/djangojs.po
@@ -392,7 +392,7 @@ msgstr "Barcodegebied"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:529
 msgid "Powered by pretix"
-msgstr "Mogelijk gemaakt door pretix"
+msgstr "Mogelijk gemaakt door eventyay"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:531
 msgid "Object"
